# log4rs-syslog-net

./: .gitignore  Cargo.toml  README.md
src/: config.rs  consts.rs  lib.rs  plain.rs  rfc5424.rs  rfc5425.rs
