[package]
name = "log4rs-syslog-net"
version = "0.1.0"
authors = ["Gitea <gitea@fake.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
log = "0.4.11"
log4rs = { version = "0.13.0", default_features = false, features = ["pattern_encoder"] }
serde = "1.0.116"
serde_derive = "1.0.116"