[package]
name = "log4rs-syslog-net"
version = "0.2.1"
authors = ["Rafael Aggeler <r.aggeler@gmx.net>"]
license = "MIT"
description = "TCP syslog appender for log4rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
log = "0.4.11"
log4rs = { version = "0.13.0", default_features = false, features = ["simple_writer", "pattern_encoder"] }